# GitMonitor

./: Cargo.toml  Config.toml  Credentials.cf  Overrides.toml  Settings.toml  ais_gitmon.service  git_monitor.service  makefile
src/application/: auth.rs  config.rs  git.rs  git_auth_store.rs  main.rs  pull.rs  signals.rs
src/cli/: main.rs
