[package]
name = "ais_gitmon"
version = "2.1.3"
edition = "2021"

[dependencies]
artisan_middleware = "^4.3.0"
#artisan_middleware = { path = "/home/dwhitfield/code/Artisan_Hosting/Libraries/artisan_middleware_lib" }
config = "0.14.0"
dusa_collection_utils = "^3.1.0"
serde = "1.0.210"
serde_json = "1.0.128"
toml = "0.8.19"
tokio = "1.40.0"
rng = "0.1.0"
rand = "0.8.5"
colored = "2.1.0"
signals = "0.0.5"
signal-hook = "0.3.17"

[[bin]]
name = "ais_gitmon"
path = "src/application/main.rs"

[[bin]]
name = "cli_credential"
path = "src/cli/main.rs"
