[package]
name = "ais_gitmon"
version = "2.3.0"
edition = "2021"

[dependencies]
artisan_middleware = "5.3.0"
config = "0.14.0"
dusa_collection_utils = "^3.1.3"
serde = "1.0.210"
serde_json = "1.0.128"
toml = "0.8.19"
tokio = "1.40.0"
rng = "0.1.0"
rand = "0.8.5"
colored = "2.1.0"
signals = "0.0.5"
signal-hook = "0.3.17"
once_cell = "1.20.2"

[[bin]]
name = "ais_gitmon"
path = "src/application/main.rs"

[[bin]]
name = "cli_credential"
path = "src/cli/main.rs"
